--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -255,6 +255,12 @@ html.dark {
   }
 }
 
+html:not(.mTheme, .aTheme, .zTheme) .boxLink{
+  &:hover {
+    filter: brightness(1);
+  }
+}
+
 .ScrollBlur {
   &:before {
     content: "";
@@ -282,7 +288,7 @@ html.dark {
     bottom: 4.5rem;
     left: 23rem;
     height: 2rem;
-    z-index: 10;
+    z-index: 0;
     width: calc(100% - 28rem);
     pointer-events: none;
   }
